sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '(' expected but 'for' found.
for(i <- 0 to (getNombreValeurs()-2))  {
^AlgBubbleSort1:12: error: illegal start of simple expression
}
^